--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <h1>Hello, Git!</h1>
+  <h2>This is a new feature added on the new-feature branch</h2>
+
   <p>This is a basic HTML file for the Git assignment.</p>
   <script src="script.js"></script>
 </body>
